--- a/src/app/common/nav-tabs/nav-tabs.component.html
+++ b/src/app/common/nav-tabs/nav-tabs.component.html
@@ -1,5 +1,23 @@
 <md-tab-group md-stretch-tabs>
-    <md-tab [label]="tabOne">Patients' directory</md-tab>
-    <md-tab [label]="tabTwo">Make an entry</md-tab>
-    <md-tab [label]="tabThree">App info</md-tab>
+    <md-tab [label]="tabOne">
+        <app-patient-info></app-patient-info>
+    </md-tab>
+    <md-tab [label]="tabTwo">
+        <app-add-patient></app-add-patient>
+    </md-tab>
+    <md-tab [label]="tabThree">
+      <div style="margin: 0 auto; display: table; padding-top: 15%;">
+      <md-card>
+          <md-chip-list>
+              <md-chip color="primary" selected="true">Angular 4</md-chip>
+              
+              <md-chip>Angular material</md-chip>
+              
+              <md-chip color="accent" selected="true">FireBase</md-chip>
+              
+              <md-chip>AngularFire 2</md-chip>
+            </md-chip-list>
+      </md-card>
+    </div>
+    </md-tab>
 </md-tab-group>
