Case sensitive search

--- a/src/app/patient-info/patient-info.component.html
+++ b/src/app/patient-info/patient-info.component.html
@@ -8,7 +8,7 @@
       <div md-card-avatar class="avatar">
         <md-icon class=" align-center icon-record">my_library_books</md-icon>
       </div>
-      <md-card-title>{{patient.name}}</md-card-title>
+      <md-card-title>{{patient.first_name}} {{patient.last_name}}</md-card-title>
       <md-card-subtitle>{{patient.gender}} ( {{patient.age}} )</md-card-subtitle>
     </md-card-header>
     <md-card-content style="height: 75px">
@@ -37,7 +37,7 @@
         <div md-card-avatar class="avatar">
           <md-icon class=" align-center icon-record">my_library_books</md-icon>
         </div>
-        <md-card-title>{{patient.name}}</md-card-title>
+        <md-card-title>{{patient.first_name}} {{patient.last_name}}</md-card-title>
         <md-card-subtitle>{{patient.gender}} ( {{patient.age}} )</md-card-subtitle>
       </md-card-header>
       <md-card-content style="height: 75px">
